# whats-new-in-cpp

./: CMakeLists.txt  README.md
cpp20/: CMakeLists.txt  bit.cpp  classNonTypeTemplate.cpp  consteval.cpp  constexprVirtual.cpp  contains.cpp  designatedInitializers.cpp  explicitCondition.cpp  hello.cpp  likely.cpp  mathConstants.cpp  midpoint.cpp  rangeLoopInitializer.cpp  span.cpp  startsEndsWith.cpp  templateLambda.cpp  toArray.cpp  usingEnum.cpp  variadic.cpp
cpp20/concepts/: conceptOverloading.cpp  hashable.cpp  isBaseOf.cpp  multipleConcepts.cpp  variadic.cpp
