set(CMAKE_CXX_STANDARD 20)

add_executable(variadic concepts/variadic.cpp)
add_executable(multipleConcepts concepts/multipleConcepts.cpp)
add_executable(isBaseOf concepts/isBaseOf.cpp)
add_executable(hashable concepts/hashable.cpp)
add_executable(conceptOverloading concepts/conceptOverloading.cpp)
add_executable(designatedInitializers designatedInitializers.cpp)
add_executable(likely likely.cpp)
add_executable(rangeLoopInitializer rangeLoopInitializer.cpp)
add_executable(templateLambda templateLambda.cpp)
add_executable(classNonTypeTemplate classNonTypeTemplate.cpp)
add_executable(consteval consteval.cpp)
add_executable(constexprVirtual constexprVirtual.cpp)
add_executable(explicitCondition explicitCondition.cpp)
# add_executable(usingEnum usingEnum.cpp)
add_executable(span span.cpp)
add_executable(bit bit.cpp)
add_executable(contains contains.cpp)
add_executable(mathConstants mathConstants.cpp)
add_executable(midpoint midpoint.cpp)
add_executable(startsEndsWith startsEndsWith.cpp)
add_executable(toArray toArray.cpp)
